# mjpeg_maker_ros

./: CMakeLists.txt  package.xml
include/mjpeg_maker/: CRtspSession.h  CStreamer.h  camera_view.h  client_acceptor.h  client_handler.h  fake_source.h  image_writer.h  jpeg_writer.h  mjpeg_maker.h  shm_manager.h  stream_source.h  utils.h
launch/: mjpeg_maker.launch
src/: CRtspSession.cpp  CStreamer.cpp  camera_view.cpp  client_handler.cpp  fake_source.cpp  image_writer.cpp  jpeg_writer.cpp  mjpeg_maker.cpp  mjpeg_maker_node.cpp  shm_manager.cpp  stream_source.cpp  utils.cpp
